--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.lowagie</groupId>
-            <artifactId>itext</artifactId>
-            <version>2.1.7</version>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.42</version>
         </dependency>
     </dependencies>
     <build>
